src/main/java/org/endeavourhealth/imapi/parser/map/mappingParser.java
// Generated from C:/Users/david/CloudStation/EhealthTrust/DiscoveryDataService/IMAPI/api/src/main/grammars\mapping.g4 by ANTLR 4.10.1
package org.endeavourhealth.imapi.parser.map;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class mappingParser extends Parser {
  static {
    RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache =
    new PredictionContextCache();
  public static final int
    T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
    T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
    T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
    T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
    T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
    T__38 = 39, BOOL = 40, DATE = 41, DATETIME = 42, TIME = 43, IDENTIFIER = 44, DELIMITEDIDENTIFIER = 45,
    STRING = 46, INTEGER = 47, NUMBER = 48, WS = 49, COMMENT = 50, LINE_COMMENT = 51;
  public static final int
    RULE_structureMap = 0, RULE_mapId = 1, RULE_url = 2, RULE_identifier = 3,
    RULE_structure = 4, RULE_structureAlias = 5, RULE_imports = 6, RULE_group = 7,
    RULE_rules = 8, RULE_typeMode = 9, RULE_extends = 10, RULE_parameters = 11,
    RULE_parameter = 12, RULE_type = 13, RULE_rule = 14, RULE_ruleName = 15,
    RULE_ruleSources = 16, RULE_ruleSource = 17, RULE_ruleTargets = 18, RULE_sourceType = 19,
    RULE_upperBound = 20, RULE_ruleContext = 21, RULE_sourceDefault = 22,
    RULE_alias = 23, RULE_whereClause = 24, RULE_checkClause = 25, RULE_log = 26,
    RULE_dependent = 27, RULE_ruleTarget = 28, RULE_transform = 29, RULE_invocation = 30,
    RULE_paramList = 31, RULE_param = 32, RULE_fhirPath = 33, RULE_literal = 34,
    RULE_groupTypeMode = 35, RULE_sourceListMode = 36, RULE_targetListMode = 37,
    RULE_inputMode = 38, RULE_modelMode = 39;

  private static String[] makeRuleNames() {
    return new String[]{
      "structureMap", "mapId", "url", "identifier", "structure", "structureAlias",
      "imports", "group", "rules", "typeMode", "extends", "parameters", "parameter",
      "type", "rule", "ruleName", "ruleSources", "ruleSource", "ruleTargets",
      "sourceType", "upperBound", "ruleContext", "sourceDefault", "alias",
      "whereClause", "checkClause", "log", "dependent", "ruleTarget", "transform",
      "invocation", "paramList", "param", "fhirPath", "literal", "groupTypeMode",
      "sourceListMode", "targetListMode", "inputMode", "modelMode"
    };
  }

  public static final String[] ruleNames = makeRuleNames();

  private static String[] makeLiteralNames() {
    return new String[]{
      null, "'map'", "'='", "'uses'", "'as'", "'alias'", "'imports'", "'group'",
      "'{'", "'}'", "'<<'", "'>>'", "'extends'", "'('", "','", "')'", "':'",
      "'->'", "';'", "'..'", "'*'", "'.'", "'default'", "'where'", "'check'",
      "'log'", "'then'", "'types'", "'type+'", "'first'", "'not_first'", "'last'",
      "'not_last'", "'only_one'", "'share'", "'collate'", "'source'", "'target'",
      "'queried'", "'produced'"
    };
  }

  private static final String[] _LITERAL_NAMES = makeLiteralNames();

  private static String[] makeSymbolicNames() {
    return new String[]{
      null, null, null, null, null, null, null, null, null, null, null, null,
      null, null, null, null, null, null, null, null, null, null, null, null,
      null, null, null, null, null, null, null, null, null, null, null, null,
      null, null, null, null, "BOOL", "DATE", "DATETIME", "TIME", "IDENTIFIER",
      "DELIMITEDIDENTIFIER", "STRING", "INTEGER", "NUMBER", "WS", "COMMENT",
      "LINE_COMMENT"
    };
  }

  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "mapping.g4";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public mappingParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  public static class StructureMapContext extends ParserRuleContext {
    public MapIdContext mapId() {
      return getRuleContext(MapIdContext.class, 0);
    }

    public TerminalNode EOF() {
      return getToken(mappingParser.EOF, 0);
    }

    public List<StructureContext> structure() {
      return getRuleContexts(StructureContext.class);
    }

    public StructureContext structure(int i) {
      return getRuleContext(StructureContext.class, i);
    }

    public List<ImportsContext> imports() {
      return getRuleContexts(ImportsContext.class);
    }

    public ImportsContext imports(int i) {
      return getRuleContext(ImportsContext.class, i);
    }

    public List<GroupContext> group() {
      return getRuleContexts(GroupContext.class);
    }

    public GroupContext group(int i) {
      return getRuleContext(GroupContext.class, i);
    }

    public StructureMapContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_structureMap;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).enterStructureMap(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).exitStructureMap(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof mappingVisitor) return ((mappingVisitor<? extends T>) visitor).visitStructureMap(this);
      else return visitor.visitChildren(this);
    }
  }

  public final StructureMapContext structureMap() throws RecognitionException {
    StructureMapContext _localctx = new StructureMapContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_structureMap);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(80);
        mapId();
        setState(84);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == T__2) {
          {
            {
              setState(81);
              structure();
            }
          }
          setState(86);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(90);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == T__5) {
          {
            {
              setState(87);
              imports();
            }
          }
          setState(92);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(94);
        _errHandler.sync(this);
        _la = _input.LA(1);
        do {
          {
            {
              setState(93);
              group();
            }
          }
          setState(96);
          _errHandler.sync(this);
          _la = _input.LA(1);
        } while (_la == T__6);
        setState(98);
        match(EOF);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class MapIdContext extends ParserRuleContext {
    public UrlContext url() {
      return getRuleContext(UrlContext.class, 0);
    }

    public IdentifierContext identifier() {
      return getRuleContext(IdentifierContext.class, 0);
    }

    public MapIdContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_mapId;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).enterMapId(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).exitMapId(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof mappingVisitor) return ((mappingVisitor<? extends T>) visitor).visitMapId(this);
      else return visitor.visitChildren(this);
    }
  }

  public final MapIdContext mapId() throws RecognitionException {
    MapIdContext _localctx = new MapIdContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_mapId);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(100);
        match(T__0);
        setState(101);
        url();
        setState(102);
        match(T__1);
        setState(103);
        identifier();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class UrlContext extends ParserRuleContext {
    public TerminalNode DELIMITEDIDENTIFIER() {
      return getToken(mappingParser.DELIMITEDIDENTIFIER, 0);
    }

    public UrlContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_url;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).enterUrl(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).exitUrl(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof mappingVisitor) return ((mappingVisitor<? extends T>) visitor).visitUrl(this);
      else return visitor.visitChildren(this);
    }
  }

  public final UrlContext url() throws RecognitionException {
    UrlContext _localctx = new UrlContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_url);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(105);
        match(DELIMITEDIDENTIFIER);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class IdentifierContext extends ParserRuleContext {
    public TerminalNode IDENTIFIER() {
      return getToken(mappingParser.IDENTIFIER, 0);
    }

    public TerminalNode DELIMITEDIDENTIFIER() {
      return getToken(mappingParser.DELIMITEDIDENTIFIER, 0);
    }

    public IdentifierContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_identifier;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).enterIdentifier(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).exitIdentifier(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof mappingVisitor) return ((mappingVisitor<? extends T>) visitor).visitIdentifier(this);
      else return visitor.visitChildren(this);
    }
  }

  public final IdentifierContext identifier() throws RecognitionException {
    IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_identifier);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(107);
        _la = _input.LA(1);
        if (!(_la == IDENTIFIER || _la == DELIMITEDIDENTIFIER)) {
          _errHandler.recoverInline(this);
        } else {
          if (_input.LA(1) == Token.EOF) matchedEOF = true;
          _errHandler.reportMatch(this);
          consume();
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class StructureContext extends ParserRuleContext {
    public UrlContext url() {
      return getRuleContext(UrlContext.class, 0);
    }

    public ModelModeContext modelMode() {
      return getRuleContext(ModelModeContext.class, 0);
    }

    public StructureAliasContext structureAlias() {
      return getRuleContext(StructureAliasContext.class, 0);
    }

    public StructureContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_structure;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).enterStructure(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).exitStructure(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof mappingVisitor) return ((mappingVisitor<? extends T>) visitor).visitStructure(this);
      else return visitor.visitChildren(this);
    }
  }

  public final StructureContext structure() throws RecognitionException {
    StructureContext _localctx = new StructureContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_structure);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(109);
        match(T__2);
        setState(110);
        url();
        setState(112);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == T__4) {
          {
            setState(111);
            structureAlias();
          }
        }

        setState(114);
        match(T__3);
        setState(115);
        modelMode();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class StructureAliasContext extends ParserRuleContext {
    public IdentifierContext identifier() {
      return getRuleContext(IdentifierContext.class, 0);
    }

    public StructureAliasContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_structureAlias;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).enterStructureAlias(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).exitStructureAlias(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof mappingVisitor) return ((mappingVisitor<? extends T>) visitor).visitStructureAlias(this);
      else return visitor.visitChildren(this);
    }
  }

  public final StructureAliasContext structureAlias() throws RecognitionException {
    StructureAliasContext _localctx = new StructureAliasContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_structureAlias);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(117);
        match(T__4);
        setState(118);
        identifier();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ImportsContext extends ParserRuleContext {
    public UrlContext url() {
      return getRuleContext(UrlContext.class, 0);
    }

    public ImportsContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_imports;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).enterImports(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).exitImports(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof mappingVisitor) return ((mappingVisitor<? extends T>) visitor).visitImports(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ImportsContext imports() throws RecognitionException {
    ImportsContext _localctx = new ImportsContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_imports);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(120);
        match(T__5);
        setState(121);
        url();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class GroupContext extends ParserRuleContext {
    public IdentifierContext identifier() {
      return getRuleContext(IdentifierContext.class, 0);
    }

    public ParametersContext parameters() {
      return getRuleContext(ParametersContext.class, 0);
    }

    public RulesContext rules() {
      return getRuleContext(RulesContext.class, 0);
    }

    public ExtendsContext extends_() {
      return getRuleContext(ExtendsContext.class, 0);
    }

    public TypeModeContext typeMode() {
      return getRuleContext(TypeModeContext.class, 0);
    }

    public GroupContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_group;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).enterGroup(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).exitGroup(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof mappingVisitor) return ((mappingVisitor<? extends T>) visitor).visitGroup(this);
      else return visitor.visitChildren(this);
    }
  }

  public final GroupContext group() throws RecognitionException {
    GroupContext _localctx = new GroupContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_group);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(123);
        match(T__6);
        setState(124);
        identifier();
        setState(125);
        parameters();
        setState(127);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == T__11) {
          {
            setState(126);
            extends_();
          }
        }

        setState(130);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == T__9) {
          {
            setState(129);
            typeMode();
          }
        }

        setState(132);
        rules();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class RulesContext extends ParserRuleContext {
    public List<RuleContext> rule_() {
      return getRuleContexts(RuleContext.class);
    }

    public RuleContext rule_(int i) {
      return getRuleContext(RuleContext.class, i);
    }

    public RulesContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_rules;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).enterRules(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).exitRules(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof mappingVisitor) return ((mappingVisitor<? extends T>) visitor).visitRules(this);
      else return visitor.visitChildren(this);
    }
  }

  public final RulesContext rules() throws RecognitionException {
    RulesContext _localctx = new RulesContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_rules);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(134);
        match(T__7);
        setState(138);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == IDENTIFIER || _la == DELIMITEDIDENTIFIER) {
          {
            {
              setState(135);
              rule_();
            }
          }
          setState(140);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(141);
        match(T__8);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class TypeModeContext extends ParserRuleContext {
    public GroupTypeModeContext groupTypeMode() {
      return getRuleContext(GroupTypeModeContext.class, 0);
    }

    public TypeModeContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_typeMode;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).enterTypeMode(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).exitTypeMode(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof mappingVisitor) return ((mappingVisitor<? extends T>) visitor).visitTypeMode(this);
      else return visitor.visitChildren(this);
    }
  }

  public final TypeModeContext typeMode() throws RecognitionException {
    TypeModeContext _localctx = new TypeModeContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_typeMode);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(143);
        match(T__9);
        setState(144);
        groupTypeMode();
        setState(145);
        match(T__10);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ExtendsContext extends ParserRuleContext {
    public IdentifierContext identifier() {
      return getRuleContext(IdentifierContext.class, 0);
    }

    public ExtendsContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_extends;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).enterExtends(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).exitExtends(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof mappingVisitor) return ((mappingVisitor<? extends T>) visitor).visitExtends(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ExtendsContext extends_() throws RecognitionException {
    ExtendsContext _localctx = new ExtendsContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_extends);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(147);
        match(T__11);
        setState(148);
        identifier();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ParametersContext extends ParserRuleContext {
    public List<ParameterContext> parameter() {
      return getRuleContexts(ParameterContext.class);
    }

    public ParameterContext parameter(int i) {
      return getRuleContext(ParameterContext.class, i);
    }

    public ParametersContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_parameters;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).enterParameters(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).exitParameters(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof mappingVisitor) return ((mappingVisitor<? extends T>) visitor).visitParameters(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ParametersContext parameters() throws RecognitionException {
    ParametersContext _localctx = new ParametersContext(_ctx, getState());
    enterRule(_localctx, 22, RULE_parameters);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(150);
        match(T__12);
        setState(151);
        parameter();
        setState(154);
        _errHandler.sync(this);
        _la = _input.LA(1);
        do {
          {
            {
              setState(152);
              match(T__13);
              setState(153);
              parameter();
            }
          }
          setState(156);
          _errHandler.sync(this);
          _la = _input.LA(1);
        } while (_la == T__13);
        setState(158);
        match(T__14);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ParameterContext extends ParserRuleContext {
    public InputModeContext inputMode() {
      return getRuleContext(InputModeContext.class, 0);
    }

    public IdentifierContext identifier() {
      return getRuleContext(IdentifierContext.class, 0);
    }

    public TypeContext type() {
      return getRuleContext(TypeContext.class, 0);
    }

    public ParameterContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_parameter;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).enterParameter(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof mappingListener) ((mappingListener) listener).exitParameter(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof mappingVisitor) return ((mappingVisitor<? extends T>) visitor).visitParameter(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ParameterContext parameter() throws RecognitionException {
    ParameterContext _localctx = new ParameterContext(_ctx, getState());
    enterRule(_localctx, 24, RULE_parameter);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(160);
        inputMode();
        setState(161);
        identifier();
        setState(163);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == T__15) {
          {
            setState(162);
            type();
          }
        }

      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class TypeContext extends ParserRuleContext {
    public IdentifierContext identifier() {
      return getRuleContext(IdentifierContext.class, 0);
    }

    public TypeContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_type;
    }
